[package]
name = "quantrs2-symengine"
version.workspace = true
authors.workspace = true
description = "Symbolic Computation in Rust via SymEngine"
readme = "README.md"
keywords = ["symbolic", "computation", "mathematics", "symengine"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
categories = ["mathematics", "science"]

[dependencies]
serde = { workspace = true, optional = true, features = ["derive"] }
quantrs2-symengine-sys.workspace = true
thiserror.workspace = true
num-traits.workspace = true
# num-complex.workspace = true  # REMOVED: Use scirs2_core::complex (SciRS2 POLICY)

# SciRS2 dependencies (SCIRS2 POLICY)
scirs2.workspace = true
scirs2-core.workspace = true

[dev-dependencies]
serde_test.workspace = true
serde_json.workspace = true
approx.workspace = true

[features]
default = []
serde-serialize = ["serde", "quantrs2-symengine-sys/serde"]
static = ["quantrs2-symengine-sys/static"]
system-deps = ["quantrs2-symengine-sys/system-deps"]

[lints]
workspace = true
