[package]
name = "quantrs2-sim"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Quantum circuit simulators for the QuantRS2 framework"

[dependencies]
quantrs2-core = { path = "../core", version = "0.1.0-alpha.5" }
quantrs2-circuit = { path = "../circuit", version = "0.1.0-alpha.5" }
num-complex.workspace = true
ndarray.workspace = true
rayon.workspace = true
thiserror.workspace = true
# Optional dependencies disabled by default to avoid OpenBLAS issues on macOS ARM
scirs2-core = { workspace = true, features = ["simd", "memory_management", "parallel", "linalg", "gpu"], optional = true }
scirs2-linalg = { workspace = true, default-features = false, optional = true }
scirs2-optimize = { workspace = true, default-features = false, optional = true }
pyo3.workspace = true

# For GPU support (optional)
wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, features = ["derive"], optional = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"], optional = true }
futures = { version = "0.3", optional = true }
rand.workspace = true
rand_distr = "0.4"
rand_chacha.workspace = true
rand_xoshiro = "0.6"
wide.workspace = true
fastrand = "2.3.0"
nalgebra-sparse = "0.9"
dashmap = "5.5"
half = { version = "2.6", features = ["num-traits"] }
ndarray-linalg = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.17"
ndrustfft = { version = "0.5", optional = true }
sprs = { version = "0.11", optional = true }
nalgebra = { workspace = true, optional = true }
md5 = "0.7"
regex = "1.0"
tempfile = "3.0"

[dev-dependencies]
approx = "0.5"

[features]
default = ["optimize"]
gpu = ["dep:wgpu", "dep:bytemuck", "dep:tokio", "dep:futures"]
simd = []
optimize = ["simd"] # Enable optimized implementations
memory_efficient = [] # Enable memory-efficient algorithms for large state vectors
advanced_math = ["dep:scirs2-core", "dep:scirs2-linalg", "dep:scirs2-optimize", "dep:ndrustfft", "dep:sprs", "dep:nalgebra"] # Enable advanced math using external libs
mps = [] # Enable MPS simulator

[[bin]]
name = "test_stabilizer"
path = "src/bin/test_stabilizer.rs"

[[bin]]
name = "debug_holographic_matrix"
path = "debug_holographic_matrix.rs"
