[package]
name = "quantrs2-tytan"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "High-level quantum annealing interface inspired by Tytan for the QuantRS2 framework"

[dependencies]
quantrs2-core = { path = "../core", version = "0.1.0-alpha.3" }
quantrs2-anneal = { path = "../anneal", version = "0.1.0-alpha.3" }
num-complex.workspace = true
thiserror.workspace = true
rand.workspace = true
rand_chacha.workspace = true
ndarray.workspace = true
symengine = { workspace = true, optional = true }
regex = { workspace = true, optional = true }

# SciRS2 dependencies for performance optimization
scirs2-core = { workspace = true, optional = true }
scirs2-linalg = { workspace = true, optional = true }
scirs2-optimize = { workspace = true, optional = true }
# Excluded due to dependency conflicts with symengine
# scirs2-cluster = { version = "0.1.0-alpha.4", optional = true }

# Optional dependencies
rayon = { workspace = true, optional = true }
ocl = { workspace = true, optional = true }

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
gpu = ["dep:ocl"]
# The dwave feature is optional and requires symengine to be installed
dwave = ["dep:symengine", "dep:regex"]
scirs = ["dep:scirs2-core", "dep:scirs2-linalg", "dep:scirs2-optimize"]
advanced_optimization = ["scirs", "dep:scirs2-optimize"]
# Combined accelerated features
gpu_accelerated = ["gpu", "scirs", "parallel"]
# These features are placeholder stubs for conditional compilation
clustering = []
plotters = []