[package]
name = "quantrs2-tytan"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "High-level quantum annealing interface inspired by Tytan for the QuantRS2 framework"

[dependencies]
quantrs2-core = { path = "../core", version = "0.1.0-alpha.5" }
quantrs2-anneal = { path = "../anneal", version = "0.1.0-alpha.5" }
num-complex.workspace = true
thiserror.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
ndarray.workspace = true
num-bigint = "0.4"
num-integer = "0.1"
num = "0.4"
chrono = "0.4"
symengine = { git = "https://github.com/cool-japan/symengine-rs.git", branch = "fixed-macos", optional = true }
symengine-sys = { git = "https://github.com/cool-japan/symengine-sys.git", branch = "fixed-macos", optional = true }
num-traits = "0.2"
regex = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
num_cpus = "1.17"
plotters = { version = "0.3", optional = true }
colored = "2.2"

# SciRS2 dependencies for performance optimization
scirs2-core = { version = "0.1.0-alpha.4", default-features = false, features = ["gpu"], optional = true }
scirs2-linalg = { version = "0.1.0-alpha.4", default-features = false, optional = true }
scirs2-optimize = { version = "0.1.0-alpha.4", default-features = false, optional = true }
scirs2-cluster = { path = "../../scirs/scirs2-cluster", optional = true }
# Add scirs2 metacrate for backward compatibility
scirs2 = { path = "../../scirs/scirs2", optional = true }

# Optional dependencies
rayon = { workspace = true, optional = true }
ocl = { workspace = true, optional = true }

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
gpu = ["dep:ocl"]
# The dwave feature is optional and requires symengine to be installed
dwave = ["dep:symengine", "dep:symengine-sys", "dep:regex"]
scirs = ["dep:scirs2-core", "dep:scirs2-linalg", "dep:scirs2-optimize", "dep:scirs2-cluster", "dep:scirs2"]
advanced_optimization = ["scirs", "dep:scirs2-optimize"]
clustering = ["dep:scirs2-cluster"]
# Combined accelerated features
gpu_accelerated = ["gpu", "scirs", "parallel"]
plotters = ["dep:plotters"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
ndarray-rand.workspace = true
rand_chacha.workspace = true
colored = "2.2"

# [[bench]]
# name = "performance_benchmark"
# harness = false