[package]
name = "quantrs2-tytan"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "High-level quantum annealing interface inspired by Tytan for the QuantRS2 framework"

[dependencies]
quantrs2-core.workspace = true
quantrs2-anneal.workspace = true
num-complex.workspace = true
thiserror.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
ndarray.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num.workspace = true
chrono.workspace = true
quantrs2-symengine = { workspace = true, optional = true }
quantrs2-symengine-sys = { workspace = true, optional = true }
num-traits.workspace = true
regex = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
num_cpus.workspace = true
plotters = { workspace = true, optional = true }
colored.workspace = true

# SciRS2 dependencies for performance optimization
scirs2-core = { version = "0.1.0-beta.1", default-features = false, features = ["gpu", "parallel", "simd"] }
scirs2-linalg = { version = "0.1.0-beta.1", default-features = false, optional = true }
scirs2-optimize = { version = "0.1.0-beta.1", default-features = false, optional = true }
scirs2-cluster = { version = "0.1.0-beta.1", optional = true }
# Add scirs2 metacrate for backward compatibility
scirs2 = { version = "0.1.0-beta.1", optional = true }

# Optional dependencies
rayon = { workspace = true, optional = true }
ocl = { workspace = true, optional = true }

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
gpu = ["dep:ocl"]
# The dwave feature is optional and requires symengine to be installed
dwave = ["dep:quantrs2-symengine", "dep:quantrs2-symengine-sys", "dep:regex"]
scirs = ["dep:scirs2-linalg", "dep:scirs2-optimize", "dep:scirs2-cluster", "dep:scirs2"]
advanced_optimization = ["scirs", "dep:scirs2-optimize"]
clustering = ["dep:scirs2-cluster"]
# Combined accelerated features
gpu_accelerated = ["gpu", "scirs", "parallel"]
plotters = ["dep:plotters"]

[dev-dependencies]
criterion.workspace = true
ndarray-rand.workspace = true
rand_chacha.workspace = true
colored.workspace = true

# [[bench]]
# name = "performance_benchmark"
# harness = false