[package]
name = "quantrs2-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "WebAssembly bindings for the QuantRS2 quantum computing framework"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quantrs2-core.workspace = true
quantrs2-circuit.workspace = true
quantrs2-sim.workspace = true

# SciRS2 dependencies (SCIRS2 POLICY)
scirs2-core.workspace = true

# WASM dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
] }

# Error handling for WASM
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
